src/App.css
:root {
  font-family: "Google Sans", sans-serif;
  --transition-time: 0.1s;
}

div.first-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: fit-content;
  margin: auto;
  font-size: 1.2rem;
}

div.first-section > div:nth-child(3) {
  font-size: 1.5rem;
  font-weight: 500;
}

div.first-section > div:nth-child(4) {
  font-size: 1.5rem;
  font-weight: 500;
}

div.first-section > div.align-left {
  align-self: flex-start;
}

div.first-section span {
  display: inline-block;
  transition: all var(--transition-time);
}

div.first-section span.animate {
  transform: scale(1.4);
  transition: all var(--transition-time);
}

div.first-section > div.league-name {
  font-size: 2rem;
  font-weight: 600;
  margin: 40px 0 0;
}

div#title {
  /* text-align: center; */
  font-size: 5rem;
  /* font-family: "Freckle Face", system-ui; */
  font-family: "Rubik Dirt", system-ui;
  margin: 0 0 20px;
}

.card-container img {
  transition: all var(--transition-time);
  width: 100%;
  aspect-ratio: 1 / 1;
  /* height: 130px; */
}

.card-container span {
  margin: 2px;
  text-align: center;
  height: 60px;
}

.card-container {
  width: 150px;
  padding: 5px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  border: solid 3px #E54F6D;
  border-radius: 5%;
  font-weight: 700;
  box-shadow: 0px 4px 5px 0px #451F55;
  transition: all var(--transition-time);

  &:hover {
    cursor: pointer;
    transform: scale(1.1);
    transition: all var(--transition-time);
  }
}

.card-container.hidden {
  border-color: black;
  background-color: black;
  transition: all var(--transition-time);
}

.card-container.hidden img {
  opacity: 0;
  transition: all var(--transition-time);
}

/* @keyframes card-hover {
  from {
    box-shadow: 0px 4px 5px 0px #451F55;
  }

  to {
    box-shadow: 0px 4px 30px 12px #451F55;
    transform: scale(1.1);
  }
} */

.card-grid {
  display: grid;
  width: fit-content;
  /* justify-content: center; */
  grid-template-columns: repeat(5, 1fr);
  gap: 20px;
  margin: 40px auto;
}

div#winning-message {
  font-family: "Rubik Dirt", system-ui;
  width: fit-content;
  text-align: center;
  margin: 50px auto;
  font-size: 3rem;
}

button#play-again-button {
  margin: auto;
  display: block;
  font-size: 1.5rem;
  font-weight: 600;
  font-family: "Google Sans", sans-serif;
  background-color: #724E91;
  color: white;
  border: none;
  padding: 5px;
  border-radius: 15px;
  box-shadow: 0px 4px 5px 0px #451F55;
  transition: all 1s;

  &:hover {
    cursor: pointer;
    box-shadow: 0px 4px 10px 5px #451F55;
    transition: all 1s;
  }
}


@media (max-width: 960px) {
  .card-grid {
    grid-template-columns: repeat(4, 1fr);
  } 

  .card-grid > div:nth-child(9) {
    grid-column: 2 / 3;
  } 

  .card-grid > div:last-child {
    grid-column: 3 / 4;
  } 

  div.first-section {
    font-size: 0.8rem;
  }

  div.first-section > div:nth-child(3) {
    font-size: 1.2rem;
  }

  div.first-section > div:nth-child(4) {
    font-size: 1.2rem;
  }

  div.first-section > div.league-name {
    font-size: 1.4rem;
  }

  div#title {
    font-size: 3rem;
  }

  /* .card-container img {
    height: 70px;
    object-fit: contain;
  } */

  .card-container {
    width: 70px;
    padding: 2px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
    border: solid 3px #E54F6D;
    border-radius: 5%;
    font-weight: 700;
    box-shadow: 0px 4px 5px 0px #451F55;
    transition: all var(--transition-time);
    font-size: 0.5rem;
  }

  .card-container span {
    height: 30px;
  }

  div#winning-message {
    font-size: 2rem;
  }
}

